--- a/src/kv_style/ls_tab1.kv
+++ b/src/kv_style/ls_tab1.kv
@@ -12,3 +12,8 @@
         pos_hint: {'x': 0.01, 'y': 0.08}
         on_press:
             root.connect()
+    Image:
+        id: background_image
+        source: '../other/images/temp_logo.png'
+        fit_mode: 'scale-down'
+        z: -1
