--- a/src/kv_style/ls_tab3.kv
+++ b/src/kv_style/ls_tab3.kv
@@ -1,4 +1,10 @@
 <LS_Tab3>
+    Image:
+        id: background_image
+        source: '../other/images/temp_logo.png'
+        fit_mode: 'scale-down'
+        z: -1
+
     # Button:
         # id: add_button
         # size_hint: (None, None)
