--- a/src/kv_style/ls_tab2.kv
+++ b/src/kv_style/ls_tab2.kv
@@ -1,6 +1,12 @@
 #:import HoverableButton src.kv_screens.hoverablebutton
 
 <LS_Tab2>:
+    Image:
+        id: background_image
+        source: '../other/images/temp_logo.png'
+        fit_mode: 'scale-down'
+        z: -1
+
     FloatLayout:
         BoxLayout:
             id: volume_box
