created transparent_logo.png to enable chat screen to disable image and create reable chat environment. Finalizing chat details. Only issue that remains is the scrollview bugs

--- a/src/kv_style/ls_tab3.kv
+++ b/src/kv_style/ls_tab3.kv
@@ -1,7 +1,7 @@
 <LS_Tab3>
     Image:
         id: background_image
-        source: '../other/images/temp_logo.png'
+        source: '../other/images/transparent_logo.png'
         fit_mode: 'scale-down'
         z: -1
 
