--- a/src/kv_style/ls_tab2.kv
+++ b/src/kv_style/ls_tab2.kv
@@ -3,7 +3,7 @@
 <LS_Tab2>:
     Image:
         id: background_image
-        source: '../other/images/temp_logo.png'
+        source: '../other/images/transparent_logo.png'
         fit_mode: 'scale-down'
         z: -1
 
