final updates to listening session settings

--- a/src/kv_style/login.kv
+++ b/src/kv_style/login.kv
@@ -14,8 +14,8 @@
             size_hint: (None, None)
             size: (dp(600), dp(40))
             font_size: dp(20)
-            pos_hint: {'center_y': 0.5}
             bold: True
+            pos_hint: {'center_x': 0.5}
 
         AnchorLayout:
             anchor_x: 'center'
