Fixing merge issues and clock event issues

--- a/src/kv_style/ls_tab2.kv
+++ b/src/kv_style/ls_tab2.kv
@@ -1,6 +1,6 @@
 #:import HoverableButton src.kv_screens.hoverablebutton
 
-<LS_Tab2>:
+<LsTab2>:
     Image:
         id: background_image
         source: '../other/images/transparent_logo.png'
