Working on linking to create session

--- a/src/kv_style/tab1.kv
+++ b/src/kv_style/tab1.kv
@@ -114,6 +114,7 @@
                 pos_hint: {'center_x': 0.5}
                 text: 'Create Session'
                 background_color:[0,1,0,1]
+                on_press: root.submit()
             BoxLayout:
                 id: blank_space
 
