Re enter password is now like the rest of the password fields

--- a/src/kv_style/create_account.kv
+++ b/src/kv_style/create_account.kv
@@ -51,6 +51,7 @@
                     id: re_password_input
                     multiline: False
                     hint_text: 'Re-enter Password'
+                    password: True
                     write_tab: False
                     on_text_validate: root.submit(username_input.text, password_input.text, re_password_input.text)
 
