Removed files and moved file to database folder

--- a/src/kv_style/listening_session.kv
+++ b/src/kv_style/listening_session.kv
@@ -1,5 +1,5 @@
 #:kivy 2.3.0
-#:import HoverableButton src.kv_screens.hoverablebutton
+#:import HoverableButton src.database.hoverablebutton
 
 <ListeningSessionScreen>:
     BoxLayout:
