--- a/src/kv_style/login.kv
+++ b/src/kv_style/login.kv
@@ -1,6 +1,6 @@
 #:kivy 2.3.0
 # create_account.kv
-#:import HoverableButton src.kv_screens.hoverablebutton
+#:import HoverableButton src.database.hoverablebutton
 
 <LoginScreen>:
     Image:
