--- a/src/kv_style/add_account_info.kv
+++ b/src/kv_style/add_account_info.kv
@@ -1,5 +1,5 @@
 # create_account.kv
-#:import HoverableButton src.kv_screens.hoverablebutton
+#:import HoverableButton src.database.hoverablebutton
 
 <AddAccountInfo>:
     AnchorLayout:
