--- a/src/kv_style/ls_tab1.kv
+++ b/src/kv_style/ls_tab1.kv
@@ -1,4 +1,4 @@
-#:import HoverableButton src.kv_screens.hoverablebutton
+#:import HoverableButton src.database.hoverablebutton
 
 <LS_Tab1>
     add_button:add_button.__self__
