--- a/src/kv_style/tab3.kv
+++ b/src/kv_style/tab3.kv
@@ -1,4 +1,4 @@
-#:import HoverableButton src.kv_screens.hoverablebutton
+#:import HoverableButton src.database.hoverablebutton
 
 <Tab3>:
     BoxLayout:
